// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasketWithProdTestButton 1`] = `
<div>
  <table
    className="TableBasket"
  >
    <tbody>
      <tr
        className="TableHeader"
      >
        <th>
          Товар
        </th>
        <th />
        <th
          className="priceTh"
        >
          Цена
        </th>
        <th />
      </tr>
      <tr
        className="RowProductBasket"
      >
        <td>
          <img
            className="Img"
            src="/img/img_9241_1.jpg"
          />
        </td>
        <td
          className="Name"
        >
          Замиокулькас
        </td>
        <td
          className="Price"
        >
          265
           руб.
        </td>
        <td>
          <button
            className="DelButton"
            onClick={[Function]}
            type="button"
          >
            <i
              className="far fa-times-circle"
            />
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="Total"
  >
    Итого:
    <div
      className="SumProductsInBasket"
    >
      265
       руб.
    </div>
  </div>
  <div
    className="ActionsBasket"
  >
    <input
      className="BasketButtons"
      onClick={[Function]}
      type="button"
      value="Очистить корзину"
    />
    <input
      className="BasketButtons"
      onClick={[Function]}
      type="button"
      value="Оформить заказ"
    />
  </div>
</div>
`;

exports[`BasketWithProdTestButton 2`] = `
<div>
  <table
    className="TableBasket"
  >
    <tbody>
      <tr
        className="TableHeader"
      >
        <th>
          Товар
        </th>
        <th />
        <th
          className="priceTh"
        >
          Цена
        </th>
        <th />
      </tr>
    </tbody>
  </table>
  <div
    className="Total"
  >
    Итого:
    <div
      className="SumProductsInBasket"
    >
      0
       руб.
    </div>
  </div>
  <div
    className="ActionsBasket"
  >
    <input
      className="BasketButtons"
      onClick={[Function]}
      type="button"
      value="Очистить корзину"
    />
    <input
      className="BasketButtons"
      onClick={[Function]}
      type="button"
      value="Оформить заказ"
    />
  </div>
</div>
`;
